--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ readme = "crates-io.md"
 rust-version = "1.60"
 
 [dependencies]
-glam = ">=0.21, <=0.23"
+bevy_math = "0.9"
+bevy_transform = "0.9"
+#glam = { version = ">=0.21, <=0.23" }
 
 [dev-dependencies]
 macroquad = "0.3"
