--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,13 +56,13 @@ jobs:
           command: doc
           args: --no-deps --workspace --all-features --document-private-items
 
-  check_msrv:
-    name: Check MSRV (1.60)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: dtolnay/rust-toolchain@1.60
-      - uses: actions-rs/cargo@v1
-        with:
-          command: check
-          args: --workspace --all-features
+  #check_msrv:
+  #  name: Check MSRV (1.60)
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - uses: actions/checkout@v1
+  #    - uses: dtolnay/rust-toolchain@1.60
+  #    - uses: actions-rs/cargo@v1
+  #      with:
+  #        command: check
+  #        args: --workspace --all-features
